updating feedback analyzer to handle file content

--- a/customer-feedback/frontend/index.html
+++ b/customer-feedback/frontend/index.html
@@ -1,65 +1,60 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Upload file to S3</title>
+    <title>Upload file with customer feedback data to S3</title>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios@0.2.1/dist/axios.min.js"></script>
   </head>
   <body>
     <div id="app">
-      <h1>S3 Uploader Test</h1>
+      <h1>Customer feedback upload</h1>
   
-      <div v-if="!image">
-        <h2>Select an image</h2>
+      <div v-if="!file">
+        <h2>Select a file</h2>
         <input type="file" @change="onFileChange">
       </div>
       <div v-else>
-        <img :src="image" />
-        <button v-if="!uploadURL" @click="removeImage">Remove image</button>
-        <button v-if="!uploadURL" @click="uploadImage">Upload image</button>
+        <img :src="file" />
+        <button v-if="!uploadURL" @click="removeFile">Remove file</button>
+        <button v-if="!uploadURL" @click="uploadFile">Upload file</button>
       </div>
-      <h2 v-if="uploadURL">Success! Image uploaded to bucket.</h2>
+      <h2 v-if="uploadURL">Success! File uploaded to bucket.</h2>
     </div>
   
     <script>
-      const MAX_IMAGE_SIZE = 1000000
+      const MAX_FILE_SIZE = 1000000
 
       /* ENTER YOUR ENDPOINT HERE */
 
-      const API_ENDPOINT = 'https://c1ucjaa6kj.execute-api.us-east-1.amazonaws.com' // e.g. https://ab1234ab123.execute-api.us-east-1.amazonaws.com/uploads
-
+      const API_ENDPOINT = 'https://c1ucjaa6kj.execute-api.us-east-1.amazonaws.com/uploads' // e.g. https://ab1234ab123.execute-api.us-east-1.amazonaws.com/uploads
+                            
       new Vue({
         el: "#app",
         data: {
-          image: '',
+          file: '',
           uploadURL: ''
         },
         methods: {
           onFileChange (e) {
             let files = e.target.files || e.dataTransfer.files
             if (!files.length) return
-            this.createImage(files[0])
+            this.createFile(files[0])
           },
-          createImage (file) {
-            // var image = new Image()
+          createFile (file) {
             let reader = new FileReader()
             reader.onload = (e) => {
-              console.log('length: ', e.target.result.includes('data:image/jpeg'))
-              if (!e.target.result.includes('data:image/jpeg')) {
-                return alert('Wrong file type - JPG only.')
+              if (e.target.result.length > MAX_FILE_SIZE) {
+                return alert('File is loo large.')
               }
-              if (e.target.result.length > MAX_IMAGE_SIZE) {
-                return alert('Image is loo large.')
-              }
-              this.image = e.target.result
+              this.file = e.target.result
             }
             reader.readAsDataURL(file)
           },
-          removeImage: function (e) {
+          removeFile: function (e) {
             console.log('Remove clicked')
-            this.image = ''
+            this.file = ''
           },
-          uploadImage: async function (e) {
+          uploadFile: async function (e) {
             console.log('Upload clicked')
             // Get the presigned URL
             const response = await axios({
@@ -67,13 +62,13 @@
               url: API_ENDPOINT
             })
             console.log('Response: ', response)
-            console.log('Uploading: ', this.image)
-            let binary = atob(this.image.split(',')[1])
+            console.log('Uploading: ', this.file)
+            let binary = atob(this.file.split(',')[1])
             let array = []
             for (var i = 0; i < binary.length; i++) {
               array.push(binary.charCodeAt(i))
             }
-            let blobData = new Blob([new Uint8Array(array)], {type: 'image/jpeg'})
+            let blobData = new Blob([new Uint8Array(array)], {type: 'text/plain'})
             console.log('Uploading to: ', response.uploadURL)
             const result = await fetch(response.uploadURL, {
               method: 'PUT',
